Fix colours for inline SVGs in Windows high contrast mode

--- a/server/views/components/modal/modal.scss
+++ b/server/views/components/modal/modal.scss
@@ -80,10 +80,10 @@
         }
 
         @media (forced-colors: active) and (prefers-color-scheme: dark) {
-          background-color: govuk-colour('yellow');
+          background-color: govuk-colour('black');
 
           svg {
-            fill: govuk-colour('black');
+            fill: govuk-colour('yellow');
           }
         }
       }
